# src/main/java/com/anonymous/finoanaapi/controllers/mapper/user/UserRoleMapper.java
@@ -1,21 +1,23 @@
 package com.anonymous.finoanaapi.controllers.mapper.user;
 
-import static com.anonymous.finoanaapi.controllers.model.User.RoleEnum.MODERATOR;
-import static com.anonymous.finoanaapi.controllers.model.User.RoleEnum.USER;
+import static com.anonymous.finoanaapi.controllers.model.UserRole.ADMIN;
+import static com.anonymous.finoanaapi.controllers.model.UserRole.MODERATOR;
+import static com.anonymous.finoanaapi.controllers.model.UserRole.USER;
 
 import com.anonymous.finoanaapi.controllers.mapper.AbstractDomaineToRestMapper;
-import com.anonymous.finoanaapi.controllers.model.User.RoleEnum;
 import com.anonymous.finoanaapi.models.enums.UserRole;
 import org.springframework.stereotype.Component;
 
 @Component
-public class UserRoleMapper extends AbstractDomaineToRestMapper<UserRole, RoleEnum> {
+public class UserRoleMapper
+    extends AbstractDomaineToRestMapper<
+        UserRole, com.anonymous.finoanaapi.controllers.model.UserRole> {
   @Override
-  public RoleEnum toRest(UserRole domain) {
-    // TODO: need to be renamed
+  public com.anonymous.finoanaapi.controllers.model.UserRole toRest(UserRole domain) {
     return switch (domain) {
-      case COMMON -> USER;
-      case MANAGER -> MODERATOR;
+      case USER -> USER;
+      case MODERATOR -> MODERATOR;
+      case ADMIN -> ADMIN;
     };
   }
 }
